# api/src/Controller/PlatController.php
@@ -13,7 +13,14 @@ use Exception;
  *  name="Plat",
  *  description="Routes liées aux plats"
  * )
+ * @OA\SecurityScheme(
+ *   securityScheme="Authorization",
+ *   type="http",
+ *   scheme="bearer",
+ *   bearerFormat = "JWT"
+ * )
  */
+
 final class PlatController extends DefaultController{
 
     private PlatModel $model;
@@ -126,6 +133,7 @@ final class PlatController extends DefaultController{
      *          )
      *      ),
      *  ),
+     *  security={{"Authentication": {}}},
      *  @OA\Response(
      *      response=201,
      *      description="Retourne le plat nouvellement crée",
@@ -165,6 +173,7 @@ final class PlatController extends DefaultController{
      *          type="integer"
      *      )
      *  ),
+     *  security={{"Authentication": {}}},
      *  @OA\RequestBody(
      *      @OA\MediaType(
      *          mediaType="application/json",
@@ -220,6 +229,7 @@ final class PlatController extends DefaultController{
      *          type="integer"
      *      )
      *  ),
+     *  security={{"Authentication": {}}},
      *  @OA\Response(
      *      response=200,
      *      description="Suppression réussie",
